# careless-whisper

./: CLAUDE.md  LICENSE  PLAN.md  PRD.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  claude-issues.yml  claude-pr-review.yml
docs/security/: audit-2026-03-22.md
docs/superpowers/plans/: 2026-03-22-security-enhancements.md
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/examples/: test_paste.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  tray.rs
src-tauri/src/audio/: capture.rs  decode.rs  resample.rs  volume.rs
src-tauri/src/config/: settings.rs
src-tauri/src/hotkey/: manager.rs
src-tauri/src/models/: downloader.rs
src-tauri/src/output/: clipboard.rs  paste.rs
src/components/: ModelManager.tsx  Overlay.tsx  Settings.tsx  Toast.tsx
src/hooks/: useTauriEvents.ts
src/styles/: globals.css
